update to Go 1.17.1 (#1050)
* update to Go 1.17.1

* appease linter

* fix linter

* use our boilerplate tool instead of upstream

--- a/.prow.yaml
+++ b/.prow.yaml
@@ -8,7 +8,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - make
           args:
@@ -26,7 +26,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - make
           args:
@@ -43,7 +43,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golangci/golangci-lint:v1.23.6
+        - image: golangci/golangci-lint:v1.42.1
           command:
             - make
           args:
@@ -76,7 +76,7 @@ presubmits:
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
     spec:
       containers:
-      - image: docker.io/mvdan/shfmt:v3.2.1
+      - image: docker.io/mvdan/shfmt:v3.3.1
         command:
         - "/bin/shfmt"
         args:
@@ -104,9 +104,13 @@ presubmits:
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
     spec:
       containers:
-        - image: python:2.7
+        - image: quay.io/kubermatic-labs/boilerplate:v0.2.0
           command:
             - "./hack/verify-boilerplate.sh"
+          resources:
+            requests:
+              memory: 64Mi
+              cpu: 100m
 
   - name: pull-machine-controller-license-validation
     run_if_changed: "^go.(mod|sum)$"
@@ -132,7 +136,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - make
           args:
@@ -161,7 +165,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -185,7 +189,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -209,7 +213,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -233,7 +237,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -256,7 +260,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -279,7 +283,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -302,7 +306,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -324,7 +328,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -346,7 +350,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -369,7 +373,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -392,7 +396,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -416,7 +420,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -439,7 +443,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -460,7 +464,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -484,7 +488,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -507,7 +511,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -530,7 +534,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -553,7 +557,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -575,7 +579,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-      - image: golang:1.16.1
+      - image: golang:1.17.1
         command:
         - "./hack/ci-e2e-test.sh"
         args:
@@ -597,7 +601,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -618,7 +622,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -641,7 +645,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -663,7 +667,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -686,7 +690,7 @@ presubmits:
       preset-rhel: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -708,7 +712,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -730,7 +734,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -752,7 +756,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -775,7 +779,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -798,7 +802,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -820,7 +824,7 @@ presubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: golang:1.16.1
+        - image: golang:1.17.1
           command:
             - "./hack/ci-e2e-test.sh"
           args:
@@ -844,7 +848,7 @@ postsubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: quay.io/kubermatic/go-docker:16.1-1903-0
+        - image: quay.io/kubermatic/build:go-1.17-node-14-kind-0.11-0
           command:
             - /bin/bash
             - -c
@@ -872,7 +876,7 @@ postsubmits:
       preset-goproxy: "true"
     spec:
       containers:
-        - image: quay.io/kubermatic/go-docker:16.1-1903-0
+        - image: quay.io/kubermatic/build:go-1.17-node-14-kind-0.11-0
           command:
             - "./hack/ci-upload-gocache.sh"
           resources:
