fix postsubmit for the new Docker images we use

--- a/.prow.yaml
+++ b/.prow.yaml
@@ -852,11 +852,11 @@ postsubmits:
           command:
             - /bin/bash
             - -c
-            - >-
-              set -euo pipefail &&
-              /usr/local/bin/entrypoint.sh &&
-              docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD &&
-              docker login -u $QUAY_IO_USERNAME -p $QUAY_IO_PASSWORD quay.io &&
+            - |
+              set -euo pipefail
+              start-docker.sh
+              docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
+              docker login -u $QUAY_IO_USERNAME -p $QUAY_IO_PASSWORD quay.io
               make download-gocache docker-image-publish
           # docker-in-docker needs privileged mode
           securityContext:
