Init commit to support compute microversion
Signed-off-by: Happy2C0de <46957159+Happy2C0de@users.noreply.github.com>

--- a/examples/openstack-machinedeployment.yaml
+++ b/examples/openstack-machinedeployment.yaml
@@ -100,6 +100,7 @@ spec:
                 namespace: kube-system
                 name: machine-controller-openstack
                 key: region
+            computeAPIVersion: "2.67"
             image: "Ubuntu 18.04 amd64"
             flavor: "m1.small"
             rhsmOfflineToken: "<< REDHAT_SUBSCRIPTIONS_OFFLINE_TOKEN >>"
