--- a/pkg/userdata/amzn2/testdata/kubelet-v1.22-aws.yaml
+++ b/pkg/userdata/amzn2/testdata/kubelet-v1.22-aws.yaml
@@ -81,25 +81,22 @@ write_files:
       ipvsadm
 
 
-    mkdir -p /etc/systemd/system/containerd.service.d
+    mkdir -p /etc/systemd/system/containerd.service.d /etc/systemd/system/docker.service.d
 
-    cat <<EOF | tee /etc/systemd/system/containerd.service.d/environment.conf
+    cat <<EOF | tee /etc/systemd/system/containerd.service.d/environment.conf /etc/systemd/system/docker.service.d/environment.conf
     [Service]
     Restart=always
     EnvironmentFile=-/etc/environment
     EOF
 
-    cat <<EOF | tee /etc/crictl.yaml
-    runtime-endpoint: unix:///run/containerd/containerd.sock
-    EOF
-
     yum install -y \
-    	containerd-1.4* \
-    	yum-plugin-versionlock
-    yum versionlock add containerd
+        containerd-1.4* \
+        docker-19.03* \
+        yum-plugin-versionlock
+    yum versionlock add docker containerd
 
     systemctl daemon-reload
-    systemctl enable --now containerd
+    systemctl enable --now docker
 
 
     opt_bin=/opt/bin
@@ -214,8 +211,8 @@ write_files:
       --cloud-config=/etc/kubernetes/cloud-config \
       --exit-on-lock-contention \
       --lock-file=/tmp/kubelet.lock \
-      --container-runtime=remote \
-      --container-runtime-endpoint=unix:///run/containerd/containerd.sock \
+      --container-runtime=docker \
+      --container-runtime-endpoint=unix:///var/run/dockershim.sock \
       --dynamic-config-dir=/etc/kubernetes/dynamic-config-dir \
       --feature-gates=DynamicKubeletConfig=true \
       --node-ip ${KUBELET_NODE_IP}
@@ -379,27 +376,10 @@ write_files:
   content: |
     export PATH="/opt/bin:$PATH"
 
-- path: /etc/containerd/config.toml
+- path: /etc/docker/daemon.json
   permissions: "0644"
   content: |
-    version = 2
-
-    [metrics]
-    address = "127.0.0.1:1338"
-
-    [plugins]
-    [plugins."io.containerd.grpc.v1.cri"]
-    [plugins."io.containerd.grpc.v1.cri".containerd]
-    [plugins."io.containerd.grpc.v1.cri".containerd.runtimes]
-    [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc]
-    runtime_type = "io.containerd.runc.v2"
-    [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc.options]
-    SystemdCgroup = true
-    [plugins."io.containerd.grpc.v1.cri".registry]
-    [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
-    [plugins."io.containerd.grpc.v1.cri".registry.mirrors."docker.io"]
-    endpoint = ["https://registry-1.docker.io"]
-
+    {"exec-opts":["native.cgroupdriver=systemd"],"storage-driver":"overlay2","log-driver":"json-file","log-opts":{"max-file":"5","max-size":"10m"}}
 
 - path: /etc/systemd/system/kubelet-healthcheck.service
   permissions: "0644"
