fix failing download script on flatcar due to read-only filesystem
Signed-off-by: Florin Peter <signed-off@florin-peter.de>

--- a/pkg/userdata/centos/testdata/kubelet-v1.18-aws.yaml
+++ b/pkg/userdata/centos/testdata/kubelet-v1.18-aws.yaml
@@ -143,7 +143,7 @@ write_files:
     sha256sum -c <<<"$cri_tools_sum"
     tar xvf "$cri_tools_filename"
     rm -f "$cri_tools_filename"
-    ln -sf "$opt_bin/crictl" "$usr_local_bin"/crictl
+    ln -sf "$opt_bin/crictl" "$usr_local_bin"/crictl || echo "symbolic link is skipped"
     cd -
     KUBE_VERSION="${KUBE_VERSION:-v1.18.14}"
     kube_dir="$opt_bin/kubernetes-$KUBE_VERSION"
