--- a/test/e2e/provisioning/testdata/machinedeployment-aws.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-aws.yaml
@@ -26,6 +26,8 @@ spec:
           cloudProviderSpec:
             accessKeyId: << AWS_ACCESS_KEY_ID >>
             secretAccessKey: << AWS_SECRET_ACCESS_KEY >>
+            assumeRoleARN: "<< AWS_ASSUME_ROLE_ARN >>"
+            assumeRoleExternalID: "<< AWS_ASSUME_ROLE_EXTERNAL_ID >>"
             region: "eu-central-1"
             availabilityZone: "eu-central-1a"
             vpcId: "vpc-819f62e9"
