--- a/.prow.yaml
+++ b/.prow.yaml
@@ -317,7 +317,7 @@ presubmits:
               cpu: 500m
 
   - name: pull-machine-controller-e2e-aws-arm
-    always_run: false
+    always_run: true
     decorate: true
     error_on_eviction: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
