--- a/test/e2e/provisioning/testdata/machinedeployment-aws-arm-machines.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-aws-arm-machines.yaml
@@ -34,7 +34,7 @@ spec:
             diskSize: 50
             diskType: "gp2"
             ebsVolumeEncrypted: false
-            ami: "ami-0489277f0e9a94f8d"
+            ami: "<< AMI >>"
             securityGroupIDs:
               - "sg-a2c195ca"
             tags:
