--- a/pkg/userdata/ubuntu/testdata/version-1.22.2.yaml
+++ b/pkg/userdata/ubuntu/testdata/version-1.22.2.yaml
@@ -100,16 +100,11 @@ write_files:
     EnvironmentFile=-/etc/environment
     EOF
 
-    apt-get install -y \
-<<<<<<< HEAD
-    apt-get install -y containerd.io=1.4*
-    apt-mark hold containerd.io
-=======
+    apt-get install --allow-downgrades -y \
         containerd.io=1.4* \
         docker-ce-cli=5:19.03* \
         docker-ce=5:19.03*
     apt-mark hold docker-ce* containerd.io
->>>>>>> temporarily disable containerd for 1.22, just to see what happens
 
     systemctl daemon-reload
     systemctl enable --now docker
