--- a/pkg/userdata/ubuntu/testdata/containerd.yaml
+++ b/pkg/userdata/ubuntu/testdata/containerd.yaml
@@ -5,7 +5,7 @@ hostname: node1
 package_upgrade: true
 package_reboot_if_required: true
 
-ssh_pwauth: no
+ssh_pwauth: false
 ssh_authorized_keys:
 - "ssh-rsa AAABBB"
 
