--- a/pkg/userdata/amzn2/testdata/kubelet-v1.17-aws-external.yaml
+++ b/pkg/userdata/amzn2/testdata/kubelet-v1.17-aws-external.yaml
@@ -183,8 +183,8 @@ write_files:
 - path: "/etc/systemd/system/kubelet.service"
   content: |
     [Unit]
-    After=containerd.service
-    Requires=containerd.service
+    After=docker.service
+    Requires=docker.service
 
     Description=kubelet: The Kubernetes Node Agent
     Documentation=https://kubernetes.io/docs/home/
