--- a/pkg/userdata/flatcar/testdata/cloud-init_v1.18.14.yaml
+++ b/pkg/userdata/flatcar/testdata/cloud-init_v1.18.14.yaml
@@ -55,8 +55,8 @@ coreos:
         After=download-script.service
     content: |
       [Unit]
-      Requires=containerd.service
-      After=containerd.service
+      Requires=docker.service
+      After=docker.service
 
       [Service]
       ExecStart=/opt/bin/health-monitor.sh container-runtime
