Update TLS Cipher Suites config for kubelet and restrict the allowed values (#1077)
* Update TLS Cipher Suites config for kubelet and restrict the allowed values

* Update fixtures

* Update allowed semver for e2e provisioing tests

* Update fixtures

* Fix formatting error for kubelet.go

* Improve code styling

* Update kubectl version for ci e2e environment

* Update e2e cluster configuration to use k8s v1.22.2 with containerd as CRI

* Templatize container runtime health check to pick container runtime dynamically

* Update test fixture for flatcard instance with cri containerd

* Update script to install master node for integration tests

* Remove invalid trailing slash from run-machine-controller.sh

* Fix linting errors

* Remove deprecated commands for terraform

--- a/pkg/userdata/flatcar/testdata/containerd.yaml
+++ b/pkg/userdata/flatcar/testdata/containerd.yaml
@@ -40,8 +40,8 @@ coreos:
         After=download-script.service
     content: |
       [Unit]
-      Requires=docker.service
-      After=docker.service
+      Requires=containerd.service
+      After=containerd.service
 
       [Service]
       ExecStart=/opt/bin/health-monitor.sh container-runtime
@@ -231,6 +231,16 @@ write_files:
       cpu: 200m
       ephemeral-storage: 1Gi
       memory: 200Mi
+    tlsCipherSuites:
+    - TLS_AES_128_GCM_SHA256
+    - TLS_AES_256_GCM_SHA384
+    - TLS_CHACHA20_POLY1305_SHA256
+    - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
+    - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+    - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
+    - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
+    - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+    - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305
     volumePluginDir: /var/lib/kubelet/volumeplugins
     volumeStatsAggPeriod: 0s
 
