openstack has deprecated OS_TENANT_NAME/OS_TENANT_ID in favor or OS_PROJECT_NAME/OS_PROJECT_ID, but these variables contain the same value.
The cloudProviderSpec has been updated to add projectName and projectID. We first try to read project variables. If they are not defined,
we fall back to tenant variables. Internally (ie Config struct), the values are stored under Project variables, even if the user has specified it
in tenant vars under cloudProviderSpec

Signed-off-by: Vincent Gramer <vincent@kubermatic.com>

--- a/.prow.yaml
+++ b/.prow.yaml
@@ -293,6 +293,29 @@ presubmits:
               memory: 1Gi
               cpu: 500m
 
+  - name: pull-machine-controller-e2e-openstack-project-auth
+    always_run: true
+    decorate: true
+    error_on_eviction: true
+    clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    labels:
+      preset-openstack: "true"
+      preset-hetzner: "true"
+      preset-e2e-ssh: "true"
+      preset-rhel: "true"
+      preset-goproxy: "true"
+    spec:
+      containers:
+        - image: golang:1.17.1
+          command:
+            - "./hack/ci-e2e-test.sh"
+          args:
+            - "TestOpenstackProjectAuthProvisioningE2E"
+          resources:
+            requests:
+              memory: 1Gi
+              cpu: 500m
+
   - name: pull-machine-controller-e2e-aws
     always_run: true
     decorate: true
