--- a/pkg/userdata/amzn2/testdata/kubelet-v1.22-aws.yaml
+++ b/pkg/userdata/amzn2/testdata/kubelet-v1.22-aws.yaml
@@ -138,7 +138,7 @@ write_files:
     sha256sum -c <<<"$cri_tools_sum"
     tar xvf "$cri_tools_filename"
     rm -f "$cri_tools_filename"
-    ln -sf "$opt_bin/crictl" "$usr_local_bin"/crictl
+    ln -sf "$opt_bin/crictl" "$usr_local_bin"/crictl || echo "symbolic link is skipped"
     cd -
     KUBE_VERSION="${KUBE_VERSION:-v1.22.2}"
     kube_dir="$opt_bin/kubernetes-$KUBE_VERSION"
@@ -236,6 +236,9 @@ write_files:
     # get the default interface IP address
     DEFAULT_IFC_IP=$(ip -o  route get 1 | grep -oP "src \K\S+")
 
+    # get the full hostname
+    FULL_HOSTNAME=$(hostname -f)
+
     if [ -z "${DEFAULT_IFC_IP}" ]
     then
     	echodate "Failed to get IP address for the default route interface"
@@ -246,13 +249,13 @@ write_files:
     # we need the line below because flatcar has the same string "coreos" in that file
     if grep -q coreos /etc/os-release
     then
-      echo "KUBELET_NODE_IP=${DEFAULT_IFC_IP}" > /etc/kubernetes/nodeip.conf
+      echo -e "KUBELET_NODE_IP=${DEFAULT_IFC_IP}\nKUBELET_HOSTNAME=${FULL_HOSTNAME}" > /etc/kubernetes/nodeip.conf
     elif [ ! -d /etc/systemd/system/kubelet.service.d ]
     then
     	echodate "Can't find kubelet service extras directory"
     	exit 1
     else
-      echo -e "[Service]\nEnvironment=\"KUBELET_NODE_IP=${DEFAULT_IFC_IP}\"" > /etc/systemd/system/kubelet.service.d/nodeip.conf
+      echo -e "[Service]\nEnvironment=\"KUBELET_NODE_IP=${DEFAULT_IFC_IP}\"\nEnvironment=\"KUBELET_HOSTNAME=${FULL_HOSTNAME}\"" > /etc/systemd/system/kubelet.service.d/nodeip.conf
     fi
 
 
@@ -322,6 +325,16 @@ write_files:
       cpu: 200m
       ephemeral-storage: 1Gi
       memory: 200Mi
+    tlsCipherSuites:
+    - TLS_AES_128_GCM_SHA256
+    - TLS_AES_256_GCM_SHA384
+    - TLS_CHACHA20_POLY1305_SHA256
+    - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
+    - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+    - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
+    - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
+    - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+    - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305
     volumePluginDir: /var/lib/kubelet/volumeplugins
     volumeStatsAggPeriod: 0s
 
