--- a/pkg/userdata/flatcar/testdata/cloud-init_v1.22.2.yaml
+++ b/pkg/userdata/flatcar/testdata/cloud-init_v1.22.2.yaml
@@ -159,8 +159,8 @@ coreos:
           --hostname-override=node1 \
           --exit-on-lock-contention \
           --lock-file=/tmp/kubelet.lock \
-          --container-runtime=docker \
-          --container-runtime-endpoint=unix:///var/run/dockershim.sock \
+          --container-runtime=remote \
+          --container-runtime-endpoint=unix:///run/containerd/containerd.sock \
           --dynamic-config-dir=/etc/kubernetes/dynamic-config-dir \
           --feature-gates=DynamicKubeletConfig=true \
           --node-ip ${KUBELET_NODE_IP}
