address PR reviews
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/pkg/userdata/rhel/testdata/kubelet-containerd-v1.19-aws.yaml
+++ b/pkg/userdata/rhel/testdata/kubelet-containerd-v1.19-aws.yaml
@@ -460,7 +460,7 @@ write_files:
 rh_subscription:
     username: ""
     password: ""
-    auto-attach: "false"
+    auto-attach: false
 
 runcmd:
 - systemctl start setup.service
