--- a/pkg/userdata/rhel/testdata/kubelet-v1.22-aws.yaml
+++ b/pkg/userdata/rhel/testdata/kubelet-v1.22-aws.yaml
@@ -460,7 +460,7 @@ write_files:
 rh_subscription:
     username: ""
     password: ""
-    auto-attach: "false"
+    auto-attach: false
 
 runcmd:
 - systemctl start setup.service
