Include optional subscription attachment in RHEL MachineDeployment  (#1100)
* add support for auto attach in rhel

Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

* update fixtures

Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

* address PR reviews

Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/pkg/userdata/rhel/testdata/kubelet-v1.19-aws.yaml
+++ b/pkg/userdata/rhel/testdata/kubelet-v1.19-aws.yaml
@@ -444,7 +444,7 @@ write_files:
 rh_subscription:
     username: ""
     password: ""
-    auto-attach: true
+    auto-attach: false
 
 runcmd:
 - systemctl start setup.service
