--- a/pkg/userdata/rhel/testdata/kubelet-v1.21-aws.yaml
+++ b/pkg/userdata/rhel/testdata/kubelet-v1.21-aws.yaml
@@ -444,7 +444,7 @@ write_files:
 rh_subscription:
     username: ""
     password: ""
-    auto-attach: true
+    auto-attach: false
 
 runcmd:
 - systemctl start setup.service
