Add Equinix Metal cloud provider

--- a/.prow.yaml
+++ b/.prow.yaml
@@ -520,6 +520,29 @@ presubmits:
               memory: 1Gi
               cpu: 500m
 
+  - name: pull-machine-controller-e2e-equinix-metal
+    optional: true
+    run_if_changed: pkg\/cloudprovider\/provider\/equinixmetal\/.*
+    decorate: true
+    error_on_eviction: true
+    clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    labels:
+      preset-hetzner: "true"
+      preset-e2e-ssh: "true"
+      preset-equinix-metal: "true"
+      preset-goproxy: "true"
+    spec:
+      containers:
+        - image: golang:1.17.1
+          command:
+            - "./hack/ci-e2e-test.sh"
+          args:
+            - "TestEquinixMetalProvisioningE2E"
+          resources:
+            requests:
+              memory: 1Gi
+              cpu: 500m
+
   - name: pull-machine-controller-e2e-cherryservers
     optional: true
     run_if_changed: pkg\/cloudprovider\/provider\/cherryservers\/.*
