Support for Equinix Metal cloud provider (#1130)
* Add Equinix Metal cloud provider

* refactor: fix invalid reference error

* Add testdata for equinixmetal

* Add mutation logic for facilitating machines and machiendeployments that use packet

* Minor fixes

Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

Co-authored-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/.prow.yaml
+++ b/.prow.yaml
@@ -497,16 +497,16 @@ presubmits:
               memory: 1Gi
               cpu: 500m
 
-  - name: pull-machine-controller-e2e-packet
+  - name: pull-machine-controller-e2e-equinix-metal
     optional: true
-    run_if_changed: pkg\/cloudprovider\/provider\/packet\/.*
+    run_if_changed: pkg\/cloudprovider\/provider\/equinixmetal\/.*
     decorate: true
     error_on_eviction: true
     clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
     labels:
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
-      preset-packet: "true"
+      preset-equinix-metal: "true"
       preset-goproxy: "true"
     spec:
       containers:
@@ -514,7 +514,7 @@ presubmits:
           command:
             - "./hack/ci-e2e-test.sh"
           args:
-            - "TestPacketProvisioningE2E"
+            - "TestEquinixMetalProvisioningE2E"
           resources:
             requests:
               memory: 1Gi
